--- a/beacon_node/Cargo.toml
+++ b/beacon_node/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 name = "beacon_node"
 path = "src/lib.rs"
 
+[features]
+trace_ext = []
+
 [dev-dependencies]
 node_test_rig = { path = "../tests/node_test_rig" }
 
