--- a/beacon_node/eth2-libp2p/Cargo.toml
+++ b/beacon_node/eth2-libp2p/Cargo.toml
@@ -30,6 +30,7 @@ smallvec = "1.0.0"
 lru = "0.4.3"
 sha2 = "0.8.0"
 base64 = "0.11.0"
+logging = { path = "../../eth2/utils/logging" }
 
 [dev-dependencies]
 slog-stdlog = "4.0.0"
