--- a/lighthouse/Cargo.toml
+++ b/lighthouse/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["Sigma Prime <contact@sigmaprime.io>"]
 edition = "2018"
 
 [dependencies]
-beacon_node = { "path" = "../beacon_node" }
+beacon_node = { "path" = "../beacon_node", features= ["trace_ext"] }
+# To Add extra logging use:
+# beacon_node = { "path" = "../beacon_node", features= ["trace_ext"] }
 tokio = "0.1.22"
 slog = { version = "^2.2.3" , features = ["max_level_trace"] }
 sloggers = "0.3.4"
