--- a/eth2/utils/bls/Cargo.toml
+++ b/eth2/utils/bls/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Paul Hauner <paul@paulhauner.com>"]
 edition = "2018"
 
 [dependencies]
-milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v0.11.1" }
+bls_eth_rust = { git = "https://github.com/sigp/bls-eth-rust", branch = "eq-and-init" }
 eth2_hashing = "0.1.0"
 hex = "0.3"
 rand = "0.7.2"
