--- a/eth2/utils/eth2_interop_keypairs/Cargo.toml
+++ b/eth2/utils/eth2_interop_keypairs/Cargo.toml
@@ -11,7 +11,7 @@ lazy_static = "1.4.0"
 num-bigint = "0.2.3"
 eth2_hashing = "0.1.0"
 hex = "0.3"
-milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v0.11.1" }
+bls_eth_rust = { git = "https://github.com/sigp/bls-eth-rust", branch = "eq-and-init" }
 serde_yaml = "0.8.11"
 serde = "1.0.102"
 serde_derive = "1.0.102"
